k8s/flaskapp-default-vs-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp-default-v2
spec:
  hosts:
  - flaskapp
  http:
  - match:
    - headers:
        x-canary:
          exact: newversion
    route:
    - destination:
        host: flaskapp
        subset: v2
  - route:
    - destination:
        host: flaskapp
        subset: v1
